--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "react-native-screens": "~4.11.1",
     "react-native-super-grid": "^4.4.2",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
