--- a/virtual-tryon-server/package.json
+++ b/virtual-tryon-server/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "openai": "^4.20.0",
+    "multer": "^1.4.5-lts.1",
+    "form-data": "^4.0.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
@@ -22,7 +26,8 @@
     "ts-node-dev": "^2.0.0",
     "@types/node": "^20.0.0",
     "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13"
+    "@types/cors": "^2.8.13",
+    "@types/multer": "^1.4.8"
   },
   "keywords": [
     "virtual-tryon",
